# DesktopRobot

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/: wifi_app.c  wifi_app.h
main/APP/INTERFACE/: lvgl_interface.c  lvgl_interface.h
main/APP/RTOS/: rtos_init.c  rtos_init.h
main/APP/WIFI/: wifi_app.c
main/BSP/ES7210/: bsp_es7210.c  bsp_es7210.h
main/BSP/I2S/: bsp_i2s.c  bsp_i2s.h
main/BSP/IIC/: bsp_iic.c  bsp_iic.h
main/BSP/LCD/: bsp_lcd.c  bsp_lcd.h
main/BSP/PCA9557/: pca9557.c  pca9557.h
