idf_component_register(
    SRC_DIRS 
        "." 
        "BSP/ES7210"
        "BSP/I2S"
        "BSP/IIC"
        "BSP/PCA9557"
        "BSP/LCD"
        "APP/WIFI"
        "APP/RTOS"
        "APP/INTERFACE"
    INCLUDE_DIRS 
        "."
        "BSP/ES7210"
        "BSP/I2S"
        "BSP/IIC"
        "BSP/PCA9557"
        "BSP/LCD"
        "APP/WIFI"
        "APP/RTOS"
        "APP/INTERFACE"
)